fix DT-2370, Folder drop-down is covered by social media icons.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -215,7 +215,11 @@ select::-ms-expand{
     background-color: @color-swatch7;
     // Flex
     .flex-display(flex);
-    .flex-direction(column);
+    .flex-wrap(wrap);
+    -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+    -moz-box-flex: 1;         /* OLD - Firefox 19- */
+    -webkit-flex: 1;          /* Chrome */
+    -ms-flex: 1;              /* IE 10 */
     flex: 1;
     width: 300px;
     height: 100vh;
@@ -245,6 +249,11 @@ select::-ms-expand{
     }
     @media @mobile {
         padding-top: 35px;
+    }
+    .brand,
+    .nav,
+    .social {
+        width: 100%;
     }
     // Footer
     .template-footer {
